RESOLVED FIXED68157
Set but not used variables cleanup (gcc 4.6)
https://bugs.webkit.org/show_bug.cgi?id=68157
Summary Set but not used variables cleanup (gcc 4.6)
mperepelitsyn
Reported 2011-09-15 05:54:04 PDT
Set but not used variables cleanup (gcc 4.6)
Attachments
Patch (2.43 KB, patch)
2011-09-15 06:02 PDT, mperepelitsyn
no flags
mperepelitsyn
Comment 1 2011-09-15 06:02:06 PDT
Darin Adler
Comment 2 2011-09-15 16:54:58 PDT
Comment on attachment 107483 [details] Patch These seem fine. In both cases I am not an expert on the code in question, but I think I can make the call even without that expertise.
mperepelitsyn
Comment 3 2011-09-16 08:43:13 PDT
Thanks. Could you land the patch?
WebKit Review Bot
Comment 4 2011-09-16 16:23:40 PDT
Comment on attachment 107483 [details] Patch Clearing flags on attachment: 107483 Committed r95333: <http://trac.webkit.org/changeset/95333>
WebKit Review Bot
Comment 5 2011-09-16 16:23:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.