Set but not used variables cleanup (gcc 4.6) https://bugs.webkit.org/show_bug.cgi?id=68157

Patch by Max Perepelitsyn <pph34r@gmail.com> on 2011-09-16
Reviewed by Darin Adler.

* platform/audio/ReverbConvolverStage.cpp:
(WebCore::ReverbConvolverStage::process):
* rendering/RenderMediaControlsChromium.cpp:
(WebCore::paintMediaButton):

git-svn-id: svn://svn.chromium.org/blink/trunk@95333 bbb929c8-8fbe-4397-9dbb-9b2b20218538