third_party/WebKit/Source/WebCore/rendering/RenderMediaControlsChromium.cpp
@@ -64,7 +64,6 @@ static bool hasSource(const HTMLMediaElement* mediaElement)
 
 static bool paintMediaButton(GraphicsContext* context, const IntRect& rect, Image* image)
 {
-    IntRect imageRect = image->rect();
     context->drawImage(image, ColorSpaceDeviceRGB, rect);
     return true;
 }
